style.css
body {
    padding: 3rem;
    margin: 0;
    background-color: #a8df82;
    color: #444;
    font-family: sans-serif;
}

a {
    color: #333;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

#container {
    margin: 0 auto;
    text-align: center;
}

#puzzle {
    display: inline-block;
    border: 1px solid #666;
    box-shadow: 5px 5px 15px rgba(0,0,0,0.25);
    margin-bottom: 2rem;
}

#puzzle input {
    display: inline;
    width: 3rem;
    height: 3rem;
    padding: 0;
    margin: 0;
    font-size: 2rem;
    font-weight: bold;
    line-height: 2rem;
    text-align: center;
    color: #444;
    border: none;
    box-shadow: inset 0px 0px 1px #000;
}

#puzzle input.even {
    background-color: rgba(255,255,255,0.6);
}

button {
    font-family: sans-serif;
    padding: 0.5rem 1rem;
    margin: 0 0 0.5rem 0;
    border: 1px solid #666;
    border-radius: 0.25rem;
}

@media screen and (max-width: 600px) {
    body {
        padding: 1rem;
    }

    #puzzle input {
        width: 2rem;
        height: 2rem;
        font-size: 1.33rem;
    }
}

@media screen and (max-width: 350px) {
    #puzzle input {
        width: 1.5rem;
        height: 1.5rem;
        font-size: 1rem;
    }
}

